@@ -1,3 +1,10 @@
+2008-02-06  Andreia Gaita <avidigal@novell.com>
+	[Backport to 1.9]
+	* BrowserWindow.cpp: use ns strings, easier. Don't call up status 
+	with the text yet, there's a problem with the string being released
+	somewhere. Only attach focus events on non-win32, windows seems to work
+	perfectly fine without it (and it loops endlessly with it)
+
 2008-01-30  Andreia Gaita <avidigal@novell.com>
 
 	* windows.mak: add local directory for includes.
